# django_movie

./: .gitignore
django_movie/: pyproject.toml
django_movie/contact/: forms.py  views.py
django_movie/contact/migrations/: 0001_initial.py
django_movie/django_movie/: settings.py  urls.py
django_movie/movies/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
django_movie/movies/migrations/: 0001_initial.py  0002_alter_ratingstar_options_alter_ratingstar_value.py  0003_auto_20220402_0359.py
django_movie/movies/templatetags/: movie_tag.py
django_movie/static/css/: bootstrap.css  style.css
django_movie/static/js/: scripts.js
django_movie/templates/: base.html
django_movie/templates/include/: header.html  sidebar.html
django_movie/templates/movies/: actor.html  base.html  movie_detail.html  movie_list.html  moviesingle.html
django_movie/templates/pages/: about.html
