[tool.poetry]
name = "django_movie"
version = "0.1.0"
description = ""
authors = ["ZhanatUturova <526628@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^9.0.1"
requests = "^2.27.1"
click = "^8.0.4"
django-ckeditor = "^6.2.0"
django-recaptcha3 = "^0.4.0"
Django = "3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
