[tool.poetry]
name = "django_movie"
version = "0.1.0"
description = ""
authors = ["ZhanatUturova <526628@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Click = "7.0"
Django = "3.0.3"
django-ckeditor = "5.9.0"
django-recaptcha3 = "0.1.0"
requests = "2.23.0"
Pillow = "^9.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
